# hs-upeen13

./: README.md
w1/: hw1.hs  w1.cabal
w1/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
w2/: CHANGELOG.md  w2.cabal
w2/app/: LogAnalysis.hs  Mini.hs
w3/: CHANGELOG.md  w3.cabal
w3/src/: Golf.hs
