cabal-version:      2.4
name:               upenn
version:            0.1.0.0

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             albertoCCz
maintainer:         albertocalzada95@gmail.com

executable upenn
    main-is:          hw1.hs
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   ./
    default-language: Haskell2010
